--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -13,21 +13,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../../componentes/header/styles_header.css">
+  <link rel="stylesheet" href="../../componentes/header/styles_header.css" />
   <script defer src="./script.js"></script>
   <title>INFORMAÇÕES DE PAGAMENTO</title>
 </head>
 
 <body>
-
   <header>
     <div class="primeira_parte">
-        <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
-        <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+      <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
+      <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
     </div>
-    
+
     <a href="../../index.html">
-        <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil">
+      <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
     </a>
   </header>
 
@@ -61,7 +60,8 @@
           </button>
         </div>
         <div class="col-md-3 primeiro_botao">
-            <a href="./editar/index.html"> <button type="button" id="primeiro_botao">EDITAR</button></a>
+          <a href="./editar/index.html">
+            <button type="button" id="primeiro_botao">EDITAR</button></a>
         </div>
       </div>
     </form>
