--- a/professor/componentes/side_menu/side_menu.html
+++ b/professor/componentes/side_menu/side_menu.html
@@ -2,58 +2,55 @@
 <html lang="pt-BR" dir="ltr">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Side Menu</title>
-    <link rel="stylesheet" href="styles_side_menu.css">
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles_side_menu.css" />
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-
     <div class="sidebar">
-
         <div class="logo-details">
-            <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo">
-            <i class='bx bx-menu' id="btn"></i>
+            <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
+            <i class="bx bx-menu" id="btn"></i>
         </div>
 
-            <li>
-                <a href="#">
-                    <i class='bx bx-group' ></i>
-                    <span class="links_name">Cursos</span>
-                </a>
-                <span class="tooltip">Cursos</span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class='bx bxs-graduation'></i>
-                    <span class="links_name">Atividades</span>
-                </a>
-                <span class="tooltip">Atividades</span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class='bx bx-folder-open' ></i>
-                    <span class="links_name">Arquivos e links</span>
-                </a>
-                <span class="tooltip">Arquivos</span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class='bx bx-user'></i>
-                    <span class="links_name">Usuários</span>
-                </a>
-                <span class="tooltip">Usuários</span>
-            </li>
-            <li class="profile">
-                <a href="../../../home/login/index.html">
-                    <i class='bx bx-log-out' id="log_out"></i>
-                    <span class="links_name">Log Out</span>
-                </a>
-                <span class="tooltip">Log Out</span>
-            </li>
-
+        <li>
+            <a href="#">
+                <i class="bx bx-group"></i>
+                <span class="links_name">Cursos</span>
+            </a>
+            <span class="tooltip">Cursos</span>
+        </li>
+        <li>
+            <a href="#">
+                <i class="bx bxs-graduation"></i>
+                <span class="links_name">Atividades</span>
+            </a>
+            <span class="tooltip">Atividades</span>
+        </li>
+        <li>
+            <a href="#">
+                <i class="bx bx-folder-open"></i>
+                <span class="links_name">Arquivos e links</span>
+            </a>
+            <span class="tooltip">Arquivos</span>
+        </li>
+        <li>
+            <a href="#">
+                <i class="bx bx-user"></i>
+                <span class="links_name">Usuários</span>
+            </a>
+            <span class="tooltip">Usuários</span>
+        </li>
+        <li class="profile">
+            <a href="../../../home/login/index.html">
+                <i class="bx bx-log-out" id="log_out"></i>
+                <span class="links_name">Log Out</span>
+            </a>
+            <span class="tooltip">Log Out</span>
+        </li>
     </div>
 
     <script>
@@ -73,7 +70,6 @@
             }
         }
     </script>
-
 </body>
 
 </html>
