--- a/professor/perfil/editar/index.html
+++ b/professor/perfil/editar/index.html
@@ -14,7 +14,7 @@
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
     <script type="text/javascript" src="../../../jquery/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="../../../jquery/jquery.mask.min.js"></script>
@@ -25,83 +25,80 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js">
     </script>
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <script src="fotoPerfil.js" defer></script>
 
-    <link rel="stylesheet" href="../../componentes/header/styles_header.css">
-    <link rel="stylesheet" href="../../componentes/side_menu/styles_side_menu.css">
+    <link rel="stylesheet" href="../../componentes/header/styles_header.css" />
+    <link rel="stylesheet" href="../../componentes/side_menu/styles_side_menu.css" />
 
     <title>Editar Perfil</title>
 </head>
 
 <body>
-
     <div class="sidebar">
         <div class="logo-details">
-            <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo">
-            <i class='bx bx-menu' id="btn"></i>
+            <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
+            <i class="bx bx-menu" id="btn"></i>
         </div>
         <li>
             <a href="#">
-                <i class='bx bx-group'></i>
+                <i class="bx bx-group"></i>
                 <span class="links_name">Minhas turmas</span>
             </a>
             <span class="tooltip">Turmas</span>
         </li>
         <li>
             <a href="#">
-                <i class='bx bx-user-plus'></i>
+                <i class="bx bx-user-plus"></i>
                 <span class="links_name">Criar novo grupo</span>
             </a>
             <span class="tooltip">Novo grupo</span>
         </li>
         <li>
             <a href="#">
-                <i class='bx bxs-graduation'></i>
+                <i class="bx bxs-graduation"></i>
                 <span class="links_name">Atividades</span>
             </a>
             <span class="tooltip">Atividades</span>
         </li>
         <li>
             <a href="#">
-                <i class='bx bx-folder-open'></i>
+                <i class="bx bx-folder-open"></i>
                 <span class="links_name">Arquivos e links</span>
             </a>
             <span class="tooltip">Arquivos</span>
         </li>
         <li>
             <a href="#">
-                <i class='bx bx-edit'></i>
+                <i class="bx bx-edit"></i>
                 <span class="links_name">Editar usuário</span>
             </a>
             <span class="tooltip">Editar usuário</span>
         </li>
         <li class="profile">
             <a href="#">
-                <i class='bx bx-log-out' id="log_out"></i>
+                <i class="bx bx-log-out" id="log_out"></i>
                 <span class="links_name">Log Out</span>
             </a>
             <span class="tooltip">Log Out</span>
         </li>
-
-
     </div>
 
     <div class="container mt-5 container" id="space">
         <h1>EDITAR PERFIL</h1>
         <form class="row g-3">
-
             <div class="profile-pic-div">
-
                 <div class="img_professor">
                     <div class="profile_image" id="fotoPerfilProfessor"></div>
                 </div>
 
                 <div class="upload_foto">
-                    <input type="file" id="inputFotoProfessor" class="input_foto" accept="image/png,image/jpg,image/jpeg">
-                    <button class="btn_upload_foto" type="button">Escolher Imagem</button>
+                    <input type="file" id="inputFotoProfessor" class="input_foto"
+                        accept="image/png,image/jpg,image/jpeg" />
+                    <button class="btn_upload_foto" type="button">
+                        Escolher Imagem
+                    </button>
                 </div>
-
             </div>
 
             <div class="col-md-12" id="icon">
@@ -154,7 +151,6 @@
             }
         }
     </script>
-
 </body>
 
 </html>
