--- a/aluno/perfil/index.html
+++ b/aluno/perfil/index.html
@@ -1,49 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
+    rel="stylesheet" />
   <script src="script.js" defer></script>
   <title>Perfil</title>
 </head>
 
 <div class="bg"></div>
 
-
 <body>
   <div class="container">
-    <div class="text-center"> <img src="./img/pessoa-sorrindo.webp" id="imgPerfil" width="200" height="200"
-        class="rounded-circle">
+    <div class="text-center">
+      <img src="./img/pessoa-sorrindo.webp" id="imgPerfil" width="200" height="200" class="rounded-circle" />
     </div>
     <form class="row g-3 formPerfil">
-
       <div class="col-md-12 lab-inp">
         <label for="nome" class="form-label">NOME</label>
-        <input id="nome" type="text" class="form-control nome" placeholder="Alice" disabled>
+        <input id="nome" type="text" class="form-control nome" placeholder="Alice" disabled />
       </div>
 
       <div class="col-md-12 lab-inp">
         <label for="email" class="form-label">E-MAIL</label>
-        <input id="email" type="email" class="form-control email" placeholder="ALICE@GMAIL.COM" disabled>
+        <input id="email" type="email" class="form-control email" placeholder="ALICE@GMAIL.COM" disabled />
       </div>
 
       <div class="col-md-12 lab-inp">
         <label for="senha" class="form-label">SENHA</label>
-        <input id="senha_instituicao" type="password" class="form-control senha" placeholder="******" disabled>
+        <input id="senha_instituicao" type="password" class="form-control senha" placeholder="******" disabled />
       </div>
       <div class="buttons">
         <div class="col-md-6">
-          <a href="./editar/index.html"><button class="botao_editar" type="button"> EDITAR</button></a>
+          <a href="./editar/index.html"><button class="botao_editar" type="button">EDITAR</button></a>
         </div>
       </div>
     </form>
