--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
 </head>
 
@@ -16,15 +16,15 @@
 
     <script>
         updateList = function () {
-            var input = document.getElementById('file');
-            var output = document.getElementById('fileList');
+            var input = document.getElementById("file");
+            var output = document.getElementById("fileList");
 
-            output.innerHTML = '<ul>';
+            output.innerHTML = "<ul>";
             for (var i = 0; i < input.files.length; ++i) {
-                output.innerHTML += '<li>' + input.files.item(i).name + '</li>';
+                output.innerHTML += "<li>" + input.files.item(i).name + "</li>";
             }
-            output.innerHTML += '</ul>';
-        }
+            output.innerHTML += "</ul>";
+        };
     </script>
 </body>
 
