--- a/instituicao/componentes/side_menu/side_menu.html
+++ b/instituicao/componentes/side_menu/side_menu.html
@@ -2,58 +2,56 @@
 <html lang="pt-BR" dir="ltr">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Side Menu</title>
-    <link rel="stylesheet" href="styles_side_menu.css">
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles_side_menu.css" />
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-
     <div class="sidebar">
         <div class="logo-details">
-            <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo">
-            <i class='bx bx-menu' id="btn"></i>
+            <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
+            <i class="bx bx-menu" id="btn"></i>
         </div>
         <ul class="nav-list">
             <li>
                 <a href="#">
-                    <i class='bx bx-group' ></i>
+                    <i class="bx bx-group"></i>
                     <span class="links_name">Turmas existentes</span>
                 </a>
                 <span class="tooltip">Turmas</span>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-user'></i>
+                    <i class="bx bx-user"></i>
                     <span class="links_name">Usuários cadastrados</span>
                 </a>
                 <span class="tooltip">Usuários</span>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-user-plus' ></i>
+                    <i class="bx bx-user-plus"></i>
                     <span class="links_name">Cadastrar novo usuário</span>
                 </a>
                 <span class="tooltip">Novo usuário</span>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-edit'></i>
+                    <i class="bx bx-edit"></i>
                     <span class="links_name">Formulário da banca</span>
                 </a>
                 <span class="tooltip">Avaliações</span>
             </li>
             <li class="profile">
                 <a href="#">
-                    <i class='bx bx-log-out' id="log_out"></i>
+                    <i class="bx bx-log-out" id="log_out"></i>
                     <span class="links_name">Log Out</span>
                 </a>
                 <span class="tooltip">Log Out</span>
             </li>
         </ul>
-
     </div>
 
     <script>
@@ -73,7 +71,6 @@
             }
         }
     </script>
-
 </body>
 
 </html>
