--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -24,38 +24,38 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
 
-  <link rel="stylesheet" href="../../componentes/header/styles_header.css">
+  <link rel="stylesheet" href="../../componentes/header/styles_header.css" />
   <script defer src="./script.js"></script>
 
   <title>Editar Perfil</title>
 </head>
 
 <body>
-
   <div class="container mt-5 container">
     <h1>EDITAR PERFIL</h1>
     <form onsubmit="editarInstituicao()" class="row g-3">
       <div class="col-md-12" id="icon">
         <label for="email_institucional" class="form-label">E-mail institucional</label>
-        <input id="input_email_institucional" type="email" class="form-control email_institucional" maxlength="255" required/>
+        <input id="input_email_institucional" type="email" class="form-control email_institucional" maxlength="255"
+          required />
         <i class="fa fa-edit" style="font-size: 24px"></i>
       </div>
 
       <div class="col-md-6" id="icon">
         <label for="nome_da_instituicao" class="form-label">Nome da instituição</label>
-        <input id="nome_instituicao" type="text" class="form-control nome_da_instituicao" maxlength="255" required/>
+        <input id="nome_instituicao" type="text" class="form-control nome_da_instituicao" maxlength="255" required />
         <i class="fa fa-edit" style="font-size: 24px"></i>
       </div>
 
       <div class="col-md-6" id="icon">
         <label for="cnpj" class="form-label">CNPJ</label>
-        <input id="cnpj_instituicao" type="text" class="form-control cnpj" required/>
+        <input id="cnpj_instituicao" type="text" class="form-control cnpj" required />
         <i class="fa fa-edit" style="font-size: 24px"></i>
       </div>
 
       <div class="col-md-6" id="icon">
         <label for="telefone" class="form-label">Telefone</label>
-        <input id="telefone_instituicao" type="text" class="form-control telefone" required/>
+        <input id="telefone_instituicao" type="text" class="form-control telefone" required />
         <i class="fa fa-edit" style="font-size: 24px"></i>
       </div>
 
