--- a/instituicao/usuarios/listagem/index.html
+++ b/instituicao/usuarios/listagem/index.html
@@ -2,21 +2,21 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../../componentes/header/styles_header.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../../componentes/header/styles_header.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
 
@@ -25,15 +25,14 @@
 <div class="bg"></div>
 
 <body>
-
     <header>
         <div class="primeira_parte">
-            <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
+            <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
             <h1 class="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
         </div>
 
         <a href="../../index.html">
-            <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil">
+            <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
         </a>
     </header>
 
@@ -54,134 +53,132 @@
                 <ul class="list-group ul">
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
                         <h2>PROFESSOR</h2>
-
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/Line.svg" alt="" />
 
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
                         <h2>PROFESSOR</h2>
-
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/Line.svg" alt="" />
 
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
                         <h2>PROFESSOR</h2>
-
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/Line.svg" alt="" />
 
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
                         <h2>PROFESSOR</h2>
-
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/Line.svg" alt="" />
 
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
                         <h2>PROFESSOR</h2>
-
                     </li>
 
-                    <img src="./img/Line.svg" alt="">
+                    <img src="./img/Line.svg" alt="" />
 
                     <li class="list-group-item li" onclick="showModal()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
 
                         <h2>PROFESSOR</h2>
-
                     </li>
-
                 </ul>
             </div>
         </div>
 
         <div class="buttonAddUsuario">
-            <a href="../cadastro/index.html"> <button type="button" class="addUsuario button5">
-                    <i class="fa fa-plus" style="font-size:36px"></i></button></a>
+            <a href="../cadastro/index.html">
+                <button type="button" class="addUsuario button5">
+                    <i class="fa fa-plus" style="font-size: 36px"></i></button></a>
         </div>
-
 
         <div class="container mt-5 container modal">
             <h1>NOME DO USUARIO</h1>
             <form class="row g-7">
                 <div class="col-md-6 lab-inp">
                     <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
-                    <input type="text" class="form-control nome_do_usuario" placeholder="joao" disabled>
+                    <input type="text" class="form-control nome_do_usuario" placeholder="joao" disabled />
                 </div>
 
                 <div class="col-md-6 lab-inp">
                     <label for="email_usuario" class="form-label">Email do usuário</label>
-                    <input type="email" class="form-control email_usuario" placeholder="joao@gmail.com" disabled>
+                    <input type="email" class="form-control email_usuario" placeholder="joao@gmail.com" disabled />
                 </div>
 
                 <div class="col-md-6 lab-inp">
                     <label for="senha" class="form-label">Senha</label>
-                    <input type="password" class="form-control senha" placeholder="4259" disabled>
+                    <input type="password" class="form-control senha" placeholder="4259" disabled />
                 </div>
 
                 <div class="col-md-6 lab-inp">
                     <label for="tipo-select" class="form-label">Tipo</label>
-                    <input type="text" class="form-control tipo" placeholder="Aluno" disabled>
-
+                    <input type="text" class="form-control tipo" placeholder="Aluno" disabled />
                 </div>
 
                 <div class="col-md-6 lab-inp">
                     <label for="turma-select" class="form-label">Curso</label>
-                    <input type="text" class="form-control curso" placeholder="Adiministração" disabled>
+                    <input type="text" class="form-control curso" placeholder="Adiministração" disabled />
                 </div>
 
                 <div class="col-md-6 lab-inp">
                     <label for="turma-select" class="form-label">Turma</label>
-                    <input type="text" class="form-control turma" placeholder="Administração" disabled>
+                    <input type="text" class="form-control turma" placeholder="Administração" disabled />
                 </div>
             </form>
             <div class="buttons">
                 <div class="col-md-3">
-                    <button class="primeiro_botao" type="button" onclick="exitModal()">CANCELAR</button>
+                    <button class="primeiro_botao" type="button" onclick="exitModal()">
+                        CANCELAR
+                    </button>
                 </div>
                 <div class="col-md-3">
-                    <button class="terceiro_botao" type="button" onclick="changeModalExcluir()">EXCLUIR</button>
+                    <button class="terceiro_botao" type="button" onclick="changeModalExcluir()">
+                        EXCLUIR
+                    </button>
                 </div>
 
                 <div class="col-md-6">
-                    <button class="segundo_botao" type="button" onclick="changeModalEditar()">EDITAR</button>
+                    <button class="segundo_botao" type="button" onclick="changeModalEditar()">
+                        EDITAR
+                    </button>
                 </div>
             </div>
         </div>
@@ -191,20 +188,20 @@
             <form class="row g-7">
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
-                    <input type="text" class="form-control nome_do_usuario" placeholder="unicuritiba@gmail.com">
-                    <i class="fa fa-edit" style="font-size:24px"></i>
+                    <input type="text" class="form-control nome_do_usuario" placeholder="unicuritiba@gmail.com" />
+                    <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="email_usuario" class="form-label">Email do usuário</label>
-                    <input type="email" class="form-control email_usuario" placeholder="Universidade De Curitiba ">
-                    <i class="fa fa-edit" style="font-size:24px"></i>
+                    <input type="email" class="form-control email_usuario" placeholder="Universidade De Curitiba " />
+                    <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="senha" class="form-label">Senha</label>
-                    <input type="password" class="form-control senha" placeholder="42.591.538/0001-68">
-                    <i class="fa fa-edit" style="font-size:24px"></i>
+                    <input type="password" class="form-control senha" placeholder="42.591.538/0001-68" />
+                    <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
                 <div class="col-md-6 lab-inp">
@@ -278,23 +275,23 @@
 
                 <script>
                     $(document).ready(function () {
-                        $(".mul-select").select2({
-
-                        });
-                    })
+                        $(".mul-select").select2({});
+                    });
                 </script>
                 <div class="buttons">
                     <div class="col-md-3">
-                        <button class="primeiro_botao" type="button" onclick="showModal()">CANCELAR</button>
+                        <button class="primeiro_botao" type="button" onclick="showModal()">
+                            CANCELAR
+                        </button>
                     </div>
 
                     <div class="col-md-3">
-                        <button class="segundo_botao" type="button" onclick="showModal()">SALVAR</button>
+                        <button class="segundo_botao" type="button" onclick="showModal()">
+                            SALVAR
+                        </button>
                     </div>
                 </div>
             </form>
-
-
         </div>
 
         <div class="container mt-5 container modal modal-excluir" id="modal-excluir">
@@ -303,11 +300,15 @@
 
             <div class="buttons">
                 <div class="col-md-6">
-                    <button class="primeiro_botao" type="button" onclick="exitchangeModalExcluir()">CANCELAR</button>
+                    <button class="primeiro_botao" type="button" onclick="exitchangeModalExcluir()">
+                        CANCELAR
+                    </button>
                 </div>
 
                 <div class="col-md-6">
-                    <button class="terceiro_botao" type="button" onclick="exitchangeModalExcluir()">CONFIRMAR</button>
+                    <button class="terceiro_botao" type="button" onclick="exitchangeModalExcluir()">
+                        CONFIRMAR
+                    </button>
                 </div>
             </div>
         </div>
