--- a/professor/cursos/index.html
+++ b/professor/cursos/index.html
@@ -1,78 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cursos.css">
-    <link rel="stylesheet" href="../componentes/header/styles_header.css">
-    <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="cursos.css" />
+    <link rel="stylesheet" href="../componentes/header/styles_header.css" />
+    <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css" />
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet" />
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
     <title>Cursos</title>
 </head>
+
 <body>
-
     <div class="sidebar">
-
         <div class="logo-details">
-            <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo">
-            <i class='bx bx-menu' id="btn"></i>
+            <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
+            <i class="bx bx-menu" id="btn"></i>
         </div>
-        
+
         <li>
             <a href="#">
-                <i class='bx bx-group' ></i>
+                <i class="bx bx-group"></i>
                 <span class="links_name">Cursos</span>
             </a>
             <span class="tooltip">Cursos</span>
         </li>
         <li>
             <a href="#">
-                <i class='bx bxs-graduation'></i>
+                <i class="bx bxs-graduation"></i>
                 <span class="links_name">Atividades</span>
             </a>
             <span class="tooltip">Atividades</span>
         </li>
         <li>
             <a href="#">
-                <i class='bx bx-folder-open' ></i>
+                <i class="bx bx-folder-open"></i>
                 <span class="links_name">Arquivos e links</span>
             </a>
             <span class="tooltip">Arquivos</span>
         </li>
         <li>
             <a href="#">
-                <i class='bx bx-user'></i>
+                <i class="bx bx-user"></i>
                 <span class="links_name">Usuários</span>
             </a>
             <span class="tooltip">Usuários</span>
         </li>
         <li class="profile">
             <a href="../../../home/login/index.html">
-                <i class='bx bx-log-out' id="log_out"></i>
+                <i class="bx bx-log-out" id="log_out"></i>
                 <span class="links_name">Log Out</span>
             </a>
             <span class="tooltip">Log Out</span>
         </li>
-
     </div>
 
     <header>
         <div class="primeira_parte">
-            <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
+            <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
             <h1 id="nomeProfessor">NOME DO PROFESSOR</h1>
         </div>
-        
+
         <a href="../perfil/index.html">
             <div class="icone_perfil">
-                <img id="iconePerfil" src="../componentes/header/img/perfil_professor.svg" alt="icone">
+                <img id="iconePerfil" src="../componentes/header/img/perfil_professor.svg" alt="icone" />
             </div>
         </a>
     </header>
@@ -80,91 +79,101 @@
     <div class="container-geral">
         <div class="container">
             <div class="col-md-6 for-cnp cursos_existentes icon">
-                <input type="text" placeholder="Insira o curso que procura:" class="form-control cursos_ex">
-                <i class="fa fa-search" style="font-size:24px"></i>
+                <input type="text" placeholder="Insira o curso que procura:" class="form-control cursos_ex" />
+                <i class="fa fa-search" style="font-size: 24px"></i>
             </div>
 
             <ul class="list-group ul-curso-existen">
                 <li class="list-group-item li">
                     <div class="curso">
                         <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <img class="book" src="./img/icone_curso.svg" alt="book" />
                         <p class="nome" id="nomeCurso">NOME</p>
                     </div>
                     <div class="button">
                         <a href="turmas/index.html">
-                            <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
+                            <button class="terceiro_botao" id="btnEntrarCurso">
+                                TURMAS EXISTENTES
+                            </button>
                         </a>
                     </div>
                 </li>
 
-                <img src="./img/linha.svg" alt="">
+                <img src="./img/linha.svg" alt="" />
 
                 <li class="list-group-item li">
                     <div class="curso">
                         <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <img class="book" src="./img/icone_curso.svg" alt="book" />
                         <p class="nome" id="nomeCurso">NOME</p>
                     </div>
                     <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
+                        <button class="terceiro_botao" id="btnEntrarCurso">
+                            TURMAS EXISTENTES
+                        </button>
                     </div>
                 </li>
-                <img src="./img/linha.svg" alt="">
+                <img src="./img/linha.svg" alt="" />
 
                 <li class="list-group-item li">
                     <div class="curso">
                         <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <img class="book" src="./img/icone_curso.svg" alt="book" />
                         <p class="nome" id="nomeCurso">NOME</p>
                     </div>
                     <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
+                        <button class="terceiro_botao" id="btnEntrarCurso">
+                            TURMAS EXISTENTES
+                        </button>
                     </div>
                 </li>
 
-                <img src="./img/linha.svg" alt="">
+                <img src="./img/linha.svg" alt="" />
 
                 <li class="list-group-item li">
                     <div class="curso">
                         <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <img class="book" src="./img/icone_curso.svg" alt="book" />
                         <p class="nome" id="nomeCurso">NOME</p>
                     </div>
                     <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
+                        <button class="terceiro_botao" id="btnEntrarCurso">
+                            TURMAS EXISTENTES
+                        </button>
                     </div>
                 </li>
 
-                <img src="./img/linha.svg" alt="">
+                <img src="./img/linha.svg" alt="" />
 
                 <li class="list-group-item li">
                     <div class="curso">
                         <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <img class="book" src="./img/icone_curso.svg" alt="book" />
                         <p class="nome" id="nomeCurso">NOME</p>
                     </div>
                     <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
+                        <button class="terceiro_botao" id="btnEntrarCurso">
+                            TURMAS EXISTENTES
+                        </button>
                     </div>
                 </li>
 
-                <img src="./img/linha.svg" alt="">
+                <img src="./img/linha.svg" alt="" />
 
                 <li class="list-group-item li">
                     <div class="curso">
                         <p class="curso">Curso:</p>
-                        <img class="book" src="./img/icone_curso.svg" alt="book">
+                        <img class="book" src="./img/icone_curso.svg" alt="book" />
                         <p class="nome" id="nomeCurso">NOME</p>
                     </div>
                     <div class="button">
-                        <button class="terceiro_botao" id="btnEntrarCurso">TURMAS EXISTENTES</button>
+                        <button class="terceiro_botao" id="btnEntrarCurso">
+                            TURMAS EXISTENTES
+                        </button>
                     </div>
                 </li>
-
             </ul>
         </div>
-
     </div>
 
     <script>
@@ -184,6 +193,6 @@
             }
         }
     </script>
-
 </body>
+
 </html>
