--- a/professor/cursos/turmas/grupo/index.html
+++ b/professor/cursos/turmas/grupo/index.html
@@ -2,16 +2,16 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="grupo.css">
+        rel="stylesheet" />
+    <link rel="stylesheet" href="grupo.css" />
     <title id="nomeGrupo">Nome do Grupo</title>
 </head>
 
@@ -19,16 +19,20 @@
     <div class="grupo">
         <div class="tema">
             <h1>Tema do projeto:</h1>
-            <p id="textTemaProjetoGrupo">Sistema para gerenciamento de Trabalho de Conclusão de Curso</p>
+            <p id="textTemaProjetoGrupo">
+                Sistema para gerenciamento de Trabalho de Conclusão de Curso
+            </p>
         </div>
 
         <div class="descricao">
             <h1>Descrição do projeto:</h1>
-            <div contentEditable="true">
-                <p id="textDescricaoProjetoGrupo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl velit, in dapibus
-                    lectus tristique vitae. Ut ut ullamcorper tortor. Nullam sed velit diam. Suspendisse vehicula
-                    lacinia
-                    fermentum. Sed non ultricies lacus.</p>
+            <div contenteditable="true">
+                <p id="textDescricaoProjetoGrupo">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+                    tincidunt nisl velit, in dapibus lectus tristique vitae. Ut ut
+                    ullamcorper tortor. Nullam sed velit diam. Suspendisse vehicula
+                    lacinia fermentum. Sed non ultricies lacus.
+                </p>
             </div>
         </div>
 
@@ -37,168 +41,168 @@
             <ul class="list-group ul-integrantes">
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-integrantes">
                     <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
@@ -208,24 +212,24 @@
 
         <div class="cont-orientadores">
             <h1>Orientadores do grupo:</h1>
-            <ul class=" list-group ul-orientadores">
+            <ul class="list-group ul-orientadores">
                 <li class="list-group-item li-orientadores">
                     <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-orientadores">
                     <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
                 </li>
                 <li class="list-group-item li-orientadores">
                     <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
@@ -236,20 +240,22 @@
         <div class="barra_progresso">
             <label>Andamento do projeto:</label>
             <div class="progress">
-                <div class="progress-bar progress_bar" role="progressbar" style="width: 90%;" aria-valuenow="25"
-                    aria-valuemin="0" aria-valuemax="100">90%</div>
+                <div class="progress-bar progress_bar" role="progressbar" style="width: 90%" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100">
+                    90%
+                </div>
             </div>
         </div>
 
         <div class="col-md-3 documentacao_div">
             <div class="documentacao">
                 <label>Documentação do projeto:</label>
-                <a href=""><button type="button" class="primeiro_botao">VISUALIZAR PDF</button></a>
+                <a href=""><button type="button" class="primeiro_botao">
+                        VISUALIZAR PDF
+                    </button></a>
             </div>
         </div>
-
     </div>
-
 </body>
 
 </html>
