--- a/professor/cursos/index.html
+++ b/professor/cursos/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <li>
-            <a href="#">
+            <a href="./index.html">
                 <i class="bx bx-group"></i>
                 <span class="links_name">Cursos</span>
             </a>
@@ -48,7 +48,7 @@
             <span class="tooltip">Arquivos</span>
         </li>
         <li>
-            <a href="#">
+            <a href="../usuarios/index.html">
                 <i class="bx bx-user"></i>
                 <span class="links_name">Usuários</span>
             </a>
