--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <li>
-            <a href="#">
+            <a href="../index.html">
                 <i class='bx bx-group'></i>
                 <span class="links_name">Cursos</span>
             </a>
@@ -56,7 +56,7 @@
             <span class="tooltip">Arquivos</span>
         </li>
         <li>
-            <a href="#">
+            <a href="../../usuarios/index.html">
                 <i class='bx bx-user'></i>
                 <span class="links_name">Usuários</span>
             </a>
@@ -573,7 +573,20 @@
 
             <div class="col-md-6 lab-inp">
                 <label for="numero-estudantes" class="form-label">Número do grupo:</label>
-                <input type="" class="form-control numero-estudantes" id="inputNumeroEstudantesModal" placeholder="3">
+                <input type="text" class="form-control numero-estudantes" id="inputNumeroEstudantesModal" placeholder="3" maxlength="255">
+            </div>
+
+            <div class="col-md-6 lab-inp" id="professoresNovoGrupo">
+                <label for="tipo-select" class="form-label">Curso:</label>
+                <select class="form-select mul-select" multiple="true" required>
+                    <option value="Cambodia">Cambodia</option>
+                    <option value="Khmer">Khmer</option>
+                    <option value="Thiland">Thiland</option>
+                    <option value="Koren">Koren</option>
+                    <option value="China">China</option>
+                    <option value="English">English</option>
+                    <option value="USA">USA</option>
+                </select>
             </div>
 
             <div class="buttons">
