--- a/professor/perfil/editar/index.html
+++ b/professor/perfil/editar/index.html
@@ -30,59 +30,68 @@
 
     <link rel="stylesheet" href="../../componentes/header/styles_header.css" />
     <link rel="stylesheet" href="../../componentes/side_menu/styles_side_menu.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet" />
 
     <title>Editar Perfil</title>
 </head>
 
 <body>
-    <div class="sidebar">
-        <div class="logo-details">
-            <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
-            <i class="bx bx-menu" id="btn"></i>
+
+    <div class="sideMenu">
+        <div class="sidebar">
+            <div class="logo-details">
+                <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
+                <i class="bx bx-menu" id="btn"></i>
+            </div>
+    
+            <li>
+                <a href="../../cursos/index.html">
+                    <i class="bx bx-group"></i>
+                    <span class="links_name">Cursos</span>
+                </a>
+                <span class="tooltip">Cursos</span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="bx bxs-graduation"></i>
+                    <span class="links_name">Atividades</span>
+                </a>
+                <span class="tooltip">Atividades</span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="bx bx-folder-open"></i>
+                    <span class="links_name">Arquivos e links</span>
+                </a>
+                <span class="tooltip">Arquivos</span>
+            </li>
+            <li>
+                <a href="../../usuarios/index.html">
+                    <i class="bx bx-user"></i>
+                    <span class="links_name">Usuários</span>
+                </a>
+                <span class="tooltip">Usuários</span>
+            </li>
+            <li class="profile">
+                <a href="../../../home/login/index.html">
+                    <i class="bx bx-log-out" id="log_out"></i>
+                    <span class="links_name">Log Out</span>
+                </a>
+                <span class="tooltip">Log Out</span>
+            </li>
         </div>
-        <li>
-            <a href="#">
-                <i class="bx bx-group"></i>
-                <span class="links_name">Minhas turmas</span>
-            </a>
-            <span class="tooltip">Turmas</span>
-        </li>
-        <li>
-            <a href="#">
-                <i class="bx bx-user-plus"></i>
-                <span class="links_name">Criar novo grupo</span>
-            </a>
-            <span class="tooltip">Novo grupo</span>
-        </li>
-        <li>
-            <a href="#">
-                <i class="bx bxs-graduation"></i>
-                <span class="links_name">Atividades</span>
-            </a>
-            <span class="tooltip">Atividades</span>
-        </li>
-        <li>
-            <a href="#">
-                <i class="bx bx-folder-open"></i>
-                <span class="links_name">Arquivos e links</span>
-            </a>
-            <span class="tooltip">Arquivos</span>
-        </li>
-        <li>
-            <a href="#">
-                <i class="bx bx-edit"></i>
-                <span class="links_name">Editar usuário</span>
-            </a>
-            <span class="tooltip">Editar usuário</span>
-        </li>
-        <li class="profile">
-            <a href="#">
-                <i class="bx bx-log-out" id="log_out"></i>
-                <span class="links_name">Log Out</span>
-            </a>
-            <span class="tooltip">Log Out</span>
-        </li>
-    </div>
+      </div>
+
+      <header>
+        <div class="primeira_parte">
+            <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
+            <h1 class="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+        </div>
+
+        <a href="../index.html">
+            <img src="../componentes/header/img/perfil_professor.svg" alt="perfil" />
+        </a>
+    </header>
 
     <div class="container mt-5 container" id="space">
         <h1>EDITAR PERFIL</h1>
