páginas de professor ajustadas com o header e side menu

--- a/professor/perfil/index.html
+++ b/professor/perfil/index.html
@@ -75,7 +75,7 @@
     <header>
         <div class="primeira_parte">
             <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-            <h1 class="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+            <h1 class="nomeProfessor">NOME DO PROFESSOR</h1>
         </div>
 
         <a href="./index.html">
@@ -83,6 +83,7 @@
         </a>
     </header>
 
+  <main>
   <div class="container">
     <h1>PERFIL DE USUÁRIO</h1>
     <form class="row g-3">
@@ -135,6 +136,7 @@
   </div>
 
   </div>
+</main>
 
   <script>
     let sidebar = document.querySelector(".sidebar");
