--- a/professor/usuarios/index.html
+++ b/professor/usuarios/index.html
@@ -80,7 +80,7 @@
         <header>
             <div class="primeira_parte">
                 <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-                <h1 class="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+                <h1 class="nomeProfessor">NOME DO PROFESSOR</h1>
             </div>
 
             <a href="../perfil/index.html">
