--- a/professor/perfil/editar/index.html
+++ b/professor/perfil/editar/index.html
@@ -84,12 +84,12 @@
 
       <header>
         <div class="primeira_parte">
-            <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-            <h1 class="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+            <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
+            <h1 class="nomeProfessor">NOME DO PROFESSOR</h1>
         </div>
 
         <a href="../index.html">
-            <img src="../componentes/header/img/perfil_professor.svg" alt="perfil" />
+            <img src="../../componentes/header/img/perfil_professor.svg" alt="perfil" />
         </a>
     </header>
 
