Integração - Conta da Instituição usando LocalStorage

--- a/instituicao/index.html
+++ b/instituicao/index.html
@@ -23,6 +23,17 @@
 
 <body>
 
+  <header>
+    <div class="primeira_parte">
+        <img src="componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
+        <h1 id="nomeInstituicao"></h1>
+    </div>
+
+    <a href="index.html">
+        <img src="componentes/header/img/perfil_instituicao.svg" alt="perfil" />
+    </a>
+  </header>
+
   <div class="container">
     <h1>PERFIL DA INSTITUIÇÃO</h1>
     <form class="row g-3">
