--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -31,6 +31,18 @@
 </head>
 
 <body>
+
+  <header>
+    <div class="primeira_parte">
+        <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
+        <h1 id="nomeInstituicao"></h1>
+    </div>
+
+    <a href="index.html">
+        <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
+    </a>
+  </header>
+
   <div class="container mt-5 container">
     <h1>EDITAR PERFIL</h1>
     <form onsubmit="editarInstituicao()" class="row g-3">
