--- a/home/compra/index.html
+++ b/home/compra/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="#">
+        <a href="../index.html">
             <img src="../images-global/logo-branca.svg" alt="logo" />
         </a>
         <nav class="navegacao">
@@ -22,7 +22,7 @@
             <div class="hamburguer"></div>
 
             <ul class="nav_links">
-                <li><a href="#">Início</a></li>
+                <li><a href="../index.html">Início</a></li>
                 <li><a href="#">Produto</a></li>
                 <li><a href="./index.html">Planos & Preços</a></li>
                 <li><a href="#">Contato</a></li>
@@ -30,7 +30,7 @@
         </nav>
         <nav class="login_adquirir">
             <a href="../login/index.html" class="login_link">Login</a>
-            <a href="../compra/index.html">
+            <a href="./index.html">
                 <button>ADQUIRIR →</button>
             </a>
         </nav>
@@ -93,7 +93,7 @@
         </form>
     </main>
     <footer>
-        <a href="#">
+        <a href="../index.html">
             <img src="../images-global/logo-branca.svg" alt="logo">
         </a>
         <h4>© 2022 Nexus Insights. Todos os direitos reservados.</h4>
