--- a/home/index.html
+++ b/home/index.html
@@ -19,12 +19,12 @@
 
 <body>
     <header>
-        <a href="#">
+        <a href="./index.html">
             <img src="./images-global/logo-branca.svg" alt="logo" />
         </a>
         <nav>
             <ul class="nav_links">
-                <li><a href="index.html">Início</a></li>
+                <li><a href="./index.html">Início</a></li>
                 <li><a href="./produto/index.html">Produto</a></li>
                 <li><a href="./compra/index.html">Planos & Preços</a></li>
                 <li><a href="#">Contato</a></li>
@@ -32,7 +32,7 @@
         </nav>
         <nav class="login_adquirir">
             <a href="./login/index.html" class="login_link">Login</a>
-            <a href="#">
+            <a href="./compra/index.html">
                 <button>ADQUIRIR →</button>
             </a>
         </nav>
