--- a/home/login/index.html
+++ b/home/login/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="#">
+        <a href="../index.html">
             <img src="../images-global/logo-branca.svg" alt="logo" />
         </a>
 
@@ -24,14 +24,14 @@
             <div class="hamburguer"></div>
 
             <ul class="nav_links">
-                <li><a href="#">Início</a></li>
+                <li><a href="../index.html">Início</a></li>
                 <li><a href="#">Produto</a></li>
                 <li><a href="../compra/index.html">Planos & Preços</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
         <nav class="login_adquirir">
-            <a href="index.html" class="login_link">Login</a>
+            <a href="./index.html" class="login_link">Login</a>
             <a href="../compra/index.html">
                 <button>ADQUIRIR →</button>
             </a>
@@ -65,14 +65,14 @@
     </div>
 
     <footer>
-        <a href="#">
+        <a href="../index.html">
             <img src="../images-global/logo-branca.svg" alt="logo" />
         </a>
         <h4>© 2022 Nexus Insights. Todos os direitos reservados.</h4>
         <div class="social_medias">
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="../index.html">
                         <svg width="7" height="16" viewBox="0 0 7 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path id="facebook_icon"
                                 d="M6.43484 8.35726H4.41523C4.41523 11.6612 4.41523 15.728 4.41523 15.728H1.42258C1.42258 15.728 1.42258 11.7006 1.42258 8.35726H0V5.7522H1.42258V4.06721C1.42258 2.86043 1.98261 0.974731 4.44274 0.974731L6.66035 0.983435V3.5122C6.66035 3.5122 5.31278 3.5122 5.05077 3.5122C4.78875 3.5122 4.41623 3.64635 4.41623 4.22183V5.75271H6.69636L6.43484 8.35726Z"
