--- a/home/compra/pagamento/index.html
+++ b/home/compra/pagamento/index.html
@@ -33,7 +33,7 @@
             <div class="hamburguer"></div>
 
             <ul class="nav_links">
-                <li><a href="#">Início</a></li>
+                <li><a href="../../index.html">Início</a></li>
                 <li><a href="#">Produto</a></li>
                 <li><a href="../index.html">Planos & Preços</a></li>
                 <li><a href="#">Contato</a></li>
