--- a/home/login/esqueceu_a_senha.html
+++ b/home/login/esqueceu_a_senha.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="#">
+        <a href="../index.html">
             <img src="../images-global/logo-branca.svg" alt="logo" />
         </a>
         <nav class="navegacao">
@@ -22,14 +22,14 @@
             <div class="hamburguer"></div>
 
             <ul class="nav_links">
-                <li><a href="#">Início</a></li>
+                <li><a href="../index.html">Início</a></li>
                 <li><a href="#">Produto</a></li>
                 <li><a href="../compra/index.html">Planos & Preços</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
         <nav class="login_adquirir">
-            <a href="index.html" class="login_link">Login</a>
+            <a href="./index.html" class="login_link">Login</a>
             <a href="../compra/index.html">
                 <button>ADQUIRIR →</button>
             </a>
@@ -57,7 +57,7 @@
     </div>
 
     <footer>
-        <a href="#">
+        <a href="../index.html">
             <img src="../images-global/logo-branca.svg" alt="logo" />
         </a>
         <h4>© 2022 Nexus Insights. Todos os direitos reservados.</h4>
