--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
   <link rel="stylesheet" href="style.css" />
+  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
@@ -14,16 +15,12 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
   <script type="text/javascript" src="../../../jquery/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="../../../jquery/jquery.mask.min.js"></script>
-
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
-
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
-
   <link rel="stylesheet" href="../../componentes/header/styles_header.css" />
   <script defer src="./script.js"></script>
 
@@ -32,16 +29,16 @@
 
 <body>
 
-  <header>
+  <header id="header">
     <div class="primeira_parte">
-        <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-        <h1 id="nomeInstituicao"></h1>
+        <img src="./img/grupo_pessoas.svg" alt="grupo_pessoas" />
+        <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
     </div>
 
-    <a href="index.html">
-        <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
+    <a href="../../index.html">
+        <img src="./img/perfil_instituicao.svg" alt="perfil" />
     </a>
-  </header>
+</header>
 
   <div class="container mt-5 container">
     <h1>EDITAR PERFIL</h1>
