responsividade do header de professor e instituição feita

--- a/professor/componentes/header/header.html
+++ b/professor/componentes/header/header.html
@@ -21,9 +21,7 @@
         </div>
 
         <a href="#">
-            <div class="icone_perfil">
-                <img id="iconePerfil" src="./img/icone_perfil_professor.svg" alt="icone" />
-            </div>
+            <img src="./img/perfil_professor.svg" alt="icone" />
         </a>
     </header>
 </body>
