--- a/instituicao/componentes/side_menu/side_menu.html
+++ b/instituicao/componentes/side_menu/side_menu.html
@@ -18,9 +18,9 @@
             <li>
                 <a href="#">
                     <i class="bx bx-group"></i>
-                    <span class="links_name">Turmas existentes</span>
+                    <span class="links_name">Cursos existentes</span>
                 </a>
-                <span class="tooltip">Turmas</span>
+                <span class="tooltip">Cursos</span>
             </li>
             <li>
                 <a href="#">
@@ -28,13 +28,6 @@
                     <span class="links_name">Usuários cadastrados</span>
                 </a>
                 <span class="tooltip">Usuários</span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="bx bx-user-plus"></i>
-                    <span class="links_name">Cadastrar novo usuário</span>
-                </a>
-                <span class="tooltip">Novo usuário</span>
             </li>
             <li>
                 <a href="#">
