--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -42,14 +42,14 @@
             <i class="bx bx-menu" id="btn"></i>
         </div>
             <li>
-                <a href="../index.html">
+                <a href="./index.html">
                     <i class="bx bx-group"></i>
                     <span class="links_name">Cursos existentes</span>
                 </a>
                 <span class="tooltip">Cursos</span>
             </li>
             <li>
-                <a href="../../usuarios/index.html">
+                <a href="../usuarios/index.html">
                     <i class="bx bx-user"></i>
                     <span class="links_name">Usuários cadastrados</span>
                 </a>
@@ -121,7 +121,7 @@
                     </button>
                 </div>
                 <div class="col-md-6">
-                    <button type="submit">CRIAR</button>
+                    <button id="botao-criar" type="submit">CRIAR</button>
                 </div>
             </div>
         </form>
