--- a/instituicao/index.html
+++ b/instituicao/index.html
@@ -32,11 +32,11 @@
     </div>
     
       <li>
-        <a href="./turmas/index.html">
+        <a href="./cursos/index.html">
           <i class="bx bx-group"></i>
-          <span class="links_name">Turmas existentes</span>
+          <span class="links_name">Cursos existentes</span>
         </a>
-        <span class="tooltip">Turmas</span>
+        <span class="tooltip">Cursos</span>
       </li>
       <li>
         <a href="./usuarios/index.html">
@@ -44,13 +44,6 @@
           <span class="links_name">Usuários cadastrados</span>
         </a>
         <span class="tooltip">Usuários</span>
-      </li>
-      <li>
-        <a href="#">
-          <i class="bx bx-user-plus"></i>
-          <span class="links_name">Cadastrar novo usuário</span>
-        </a>
-        <span class="tooltip">Novo usuário</span>
       </li>
       <li>
         <a href="#">
