--- a/instituicao/perfil/infos_pagamento/editar/index.html
+++ b/instituicao/perfil/infos_pagamento/editar/index.html
@@ -26,6 +26,8 @@
   <link rel="stylesheet" href="../../../componentes/header/styles_header.css" />
   <script src="./script.js" defer></script>
 
+  <link rel="stylesheet" href="../../../componentes/side_menu/styles_side_menu.css">
+  <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
   <title>EDITAR INFORMAÇÕES DE PAGAMENTO</title>
 </head>
 
@@ -40,6 +42,59 @@
       <img src="../../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
     </a>
   </header>
+
+  <div class="sidebar">
+    <div class="logo-details">
+        <img class="icon" src="../../../../home/images-global/logo-branca.svg" alt="logo" />
+        <i class="bx bx-menu" id="btn"></i>
+    </div>
+        <li>
+            <a href="../../../cursos/index.html">
+                <i class="bx bx-group"></i>
+                <span class="links_name">Cursos existentes</span>
+            </a>
+            <span class="tooltip">Cursos</span>
+        </li>
+        <li>
+            <a href="../../../usuarios/index.html">
+                <i class="bx bx-user"></i>
+                <span class="links_name">Usuários cadastrados</span>
+            </a>
+            <span class="tooltip">Usuários</span>
+        </li>
+        <li>
+            <a href="#">
+                <i class="bx bx-edit"></i>
+                <span class="links_name">Formulário da banca</span>
+            </a>
+            <span class="tooltip">Avaliações</span>
+        </li>
+        <li class="profile">
+            <a href="../../../../home/login/index.html">
+                <i class="bx bx-log-out" id="log_out"></i>
+                <span class="links_name">Log Out</span>
+            </a>
+            <span class="tooltip">Log Out</span>
+        </li>
+</div>
+
+<script>
+    let sidebar = document.querySelector(".sidebar");
+    let closeBtn = document.querySelector("#btn");
+
+    closeBtn.addEventListener("click", () => {
+        sidebar.classList.toggle("open");
+        menuBtnChange();
+    });
+
+    function menuBtnChange() {
+        if (sidebar.classList.contains("open")) {
+            closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+        } else {
+            closeBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+        }
+    }
+</script>
 
   <div class="container mt-5 container">
     <h1>EDITAR INFORMAÇÕES DE PAGAMENTO</h1>
